# umbra

./: .clang-format  .travis.yml  CMakeLists.txt  conanfile.txt  early_hook.cmake  readme.org
include/umbra/: shadow.hpp  vamap.hpp
test/: CMakeLists.txt  poison_test.cpp  shadow_warning_on.cpp  test.cpp
